--- a/src/components/pokeballSelector.html
+++ b/src/components/pokeballSelector.html
@@ -17,16 +17,16 @@
                     <th width="20%" data-toggle="tooltip" title="Uncaptured Shiny Pokémon will use this ball selection">✨</th>
                 </tr>
                 <tr>
-                    <td data-bind="template: {name: 'selectedPokeballDisplayTemplate', data: { 'value': App.game.pokeballs.alreadyCaughtSelection, 'field': App.game.pokeballs._alreadyCaughtSelection, 'title': 'Already Caught Pokémon' }}"></td>
-                    <td data-bind="template: {name: 'selectedPokeballDisplayTemplate', data: { 'value': App.game.pokeballs.alreadyCaughtShinySelection, 'field': App.game.pokeballs._alreadyCaughtShinySelection, 'title': 'Already Caught Shiny Pokémon' }}"></td>
-                    <td data-bind="template: {name: 'selectedPokeballDisplayTemplate', data: { 'value': App.game.pokeballs.notCaughtSelection, 'field': App.game.pokeballs._notCaughtSelection, 'title': 'New Pokémon' }}"></td>
-                    <td data-bind="template: {name: 'selectedPokeballDisplayTemplate', data: { 'value': App.game.pokeballs.notCaughtShinySelection, 'field': App.game.pokeballs._notCaughtShinySelection, 'title': 'New Shiny Pokémon' }}"></td>
+                    <td data-bind="template: {name: 'selectedPokeballDisplayTemplate', data: { 'value': App.game.pokeballs.pokeballSelectors[GameConstants.PokeballSelector.alreadyCaught].pokeball(), 'field': App.game.pokeballs.pokeballSelectors[GameConstants.PokeballSelector.alreadyCaught].pokeball, 'title': 'Already Caught Pokémon' }}"></td>
+                    <td data-bind="template: {name: 'selectedPokeballDisplayTemplate', data: { 'value': App.game.pokeballs.pokeballSelectors[GameConstants.PokeballSelector.alreadyCaughtShiny].pokeball(), 'field': App.game.pokeballs.pokeballSelectors[GameConstants.PokeballSelector.alreadyCaughtShiny].pokeball, 'title': 'Already Caught Shiny Pokémon' }}"></td>
+                    <td data-bind="template: {name: 'selectedPokeballDisplayTemplate', data: { 'value': App.game.pokeballs.pokeballSelectors[GameConstants.PokeballSelector.notCaught].pokeball(), 'field': App.game.pokeballs.pokeballSelectors[GameConstants.PokeballSelector.notCaught].pokeball, 'title': 'New Pokémon' }}"></td>
+                    <td data-bind="template: {name: 'selectedPokeballDisplayTemplate', data: { 'value': App.game.pokeballs.pokeballSelectors[GameConstants.PokeballSelector.notCaughtShiny].pokeball(), 'field': App.game.pokeballs.pokeballSelectors[GameConstants.PokeballSelector.notCaughtShiny].pokeball, 'title': 'New Shiny Pokémon' }}"></td>
                 </tr>
                 <tr>
-                    <td data-bind="template: {name: 'selectedPokeballCountTemplate', data: App.game.pokeballs.getBallQuantity(App.game.pokeballs.alreadyCaughtSelection)}"></td>
-                    <td data-bind="template: {name: 'selectedPokeballCountTemplate', data: App.game.pokeballs.getBallQuantity(App.game.pokeballs.alreadyCaughtShinySelection)}"></td>
-                    <td data-bind="template: {name: 'selectedPokeballCountTemplate', data: App.game.pokeballs.getBallQuantity(App.game.pokeballs.notCaughtSelection)}"></td>
-                    <td data-bind="template: {name: 'selectedPokeballCountTemplate', data: App.game.pokeballs.getBallQuantity(App.game.pokeballs.notCaughtShinySelection)}"></td>
+                    <td data-bind="template: {name: 'selectedPokeballCountTemplate', data: App.game.pokeballs.getBallQuantity(App.game.pokeballs.pokeballSelectors[GameConstants.PokeballSelector.alreadyCaught].pokeball())}"></td>
+                    <td data-bind="template: {name: 'selectedPokeballCountTemplate', data: App.game.pokeballs.getBallQuantity(App.game.pokeballs.pokeballSelectors[GameConstants.PokeballSelector.alreadyCaughtShiny].pokeball())}"></td>
+                    <td data-bind="template: {name: 'selectedPokeballCountTemplate', data: App.game.pokeballs.getBallQuantity(App.game.pokeballs.pokeballSelectors[GameConstants.PokeballSelector.notCaught].pokeball())}"></td>
+                    <td data-bind="template: {name: 'selectedPokeballCountTemplate', data: App.game.pokeballs.getBallQuantity(App.game.pokeballs.pokeballSelectors[GameConstants.PokeballSelector.notCaughtShiny].pokeball())}"></td>
                 </tr>
                 <!-- ko if: new TemporaryBattleRequirement('Anabel').isCompleted() -->
                 <tr>
