--- a/src/components/pokeballSelectorModal.html
+++ b/src/components/pokeballSelectorModal.html
@@ -1,6 +1,6 @@
 <div class="modal fade" id="pokeballSelectorModal" tabindex="-1" role="dialog"
   aria-labelledby="PokeballSelectorModal" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-scrollable modal-sm" role="document">
+  <div class="modal-dialog modal-dialog-scrollable modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="pokeballSelectorModalLabel">Poké Ball Selection</h5>
@@ -9,6 +9,59 @@
         </button>
       </div>
       <div class="modal-body p-0">
+        <div class="row">
+          <!-- Poké Ball Selectors -->
+          <div class="col-md-6 col-12 collapse dont-collapse-sm justify-content-center" id="evo-item-list">
+            <h4>Selectors</h4>
+            <div class="scrolling-div" data-bind="foreach: App.game.pokeballs.pokeballSelectors">
+              <div class="col-12 breedingListItem">
+                <button class="btn btn-secondary smallButton list-group-item-action" style="cursor: pointer; padding-right:15px"
+                  data-bind="css:{'item-selected': App.game.pokeballs.selectedSelection() === $data.pokeball}, click: function(){ App.game.pokeballs.selectedSelection($data.pokeball) }">
+                  <img data-bind="attr: {src: '' }" style="max-width: 32px; margin: -10px; padding: 12px 0px;">
+                  <div class="d-inline-block" data-bind="text: $data.name" style="margin-left: 20px; margin-top:8px;"></div>
+                  <!--<span data-bind="text: player._itemList[$data]().toLocaleString('en-US')" style="float:right; margin-top:8px;"></span>-->
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <!-- Poké Balls -->
+          <div class="col-md-6 col-12 collapse dont-collapse-sm justify-content-center" id="evo-pokemon-list">
+            <h4>Pokémon</h4>
+            <div class="scrolling-div">
+              <div class="col-md-6 col-sm-10 col-lg-12 breedingListItem"> <!--offset-sm-1 offset-md-0 offset-md-0 -->
+                <button class="btn btn-secondary smallButton list-group-item-action" style="padding-right:15px"
+                data-bind="
+                click: function(){App.game.pokeballs.selectedSelection()(-1)},
+                css:{'item-selected': App.game.pokeballs.selectedSelection()() === -1}">
+                  <img class="smallImage" data-bind="attr:{src: 'assets/images/pokeball/' + GameConstants.Pokeball[-1] + '.svg' }"/>
+                  <div class="d-inline-block" data-bind="text: name" style="margin-left: 20px; margin-top: 8px;">Name</div>
+                </button>
+              </div>
+              <!-- ko foreach: App.game.pokeballs.pokeballs -->
+              <div class="col-md-6 col-sm-10 col-lg-12 breedingListItem"> <!--offset-sm-1 offset-md-0 offset-md-0 -->
+                <button class="btn btn-secondary smallButton list-group-item-action" style="padding-right:15px"
+                data-bind="
+                click: function(){App.game.pokeballs.selectedSelection()($data.type)},
+                visible: $data.unlocked() || $data.quantity(),
+                css:{'item-selected': App.game.pokeballs.selectedSelection()() === $data.type}">
+                  <img class="smallImage" data-bind="attr:{src: 'assets/images/pokeball/' + GameConstants.Pokeball[$data.type] + '.svg' }"/>
+                  <div class="d-inline-block" data-bind="text: name" style="margin-left: 20px; margin-top: 8px;">Name</div>
+                </button>
+              </div>
+              <!-- /ko -->
+            </div>
+          </div>
+        </div>
+
+
+
+
+
+
+
+
+
         <div class="table-warning p-1 text-left" data-bind="text: App.game.pokeballs.selectedTitle"></div>
         <div class="card-body p-0 show table-responsive text-left">
           <table class="table table-sm m-0">
