--- a/src/components/pokeballSelectorModal.html
+++ b/src/components/pokeballSelectorModal.html
@@ -103,34 +103,30 @@
                           <hr style="margin-top:0; border-color:white;"/>
                       </div>
                       <!-- /ko -->
+
+                      <!-- ko if: App.game.pokeballs.selectedSelection() === App.game.pokeballs.pokeballSelectors[GameConstants.PokeballSelector.type].pokeball -->
+                        <!-- ko foreach: GameHelper.enumNumbers(PokemonType).filter(value => !isNaN(value) && value != -1) -->
+                        <div class="form-group col-md-9 col-6">
+                          <span data-bind="text: PokemonType[$data]">Type</span>
+                          <!--<img class="pokeball-small pokeball-selected" src="assets/images/pokeball/Beastball.svg">-->
+                          <i class="bi bi-question-circle mx-1"
+                          data-bind='tooltip: { title: `Catch ${PokemonType[$data]}-type Pokémon with the Poké Ball selected in the "By Type" selector`, trigger: `hover`, html: true }'></i>
+                        </div>
+                        <div class="form-group col-md-3 col-6">
+                            <label class="form-check-label toggler-wrapper style-1 float-right">
+                                <input class="form-check-input" type="checkbox"
+                                    data-bind="checked: App.game.pokeballs.typeArray[$data], attr: { id: `pokeball-by-type-${$data}` }">
+                                <div class="toggler-slider">
+                                    <div class="toggler-knob"></div>
+                                </div>
+                            </label>
+                        </div>
+                        <!-- /ko -->
+                      <!-- /ko -->
                   </div>
               </div>
             </div>
 
-            <!--
-            <div class="col-12 scrolling-div-pokeball ">
-              <div class="pt-3">
-                  <h4 data-bind="text: App.game.pokeballs.selectedSelection()() === -1 ? 'No Poké Ball selected' : ItemList[GameConstants.Pokeball[App.game.pokeballs.selectedSelection()()]].displayName">Pokeball</h4>
-              </div>
-              <div class="row">
-                <div class="col-md-12 col-12">
-                  <div class="row no-gutters justify-content-center">
-                    <div class="row justify-content-center" style="padding:15px;">
-                      <img class="pokeball-small pokeball-selected" data-bind="attr:{src: 'assets/images/pokeball/' + GameConstants.Pokeball[App.game.pokeballs.selectedSelection()()] + '.svg' }"/>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-12 col-12">
-                  <div class="row no-gutters justify-content-center">
-                    <div class="row justify-content-center" style="padding:15px;"
-                    data-bind="text: App.game.pokeballs.selectedSelection()() === -1 ? 'Do not catch' : App.game.pokeballs.pokeballs[App.game.pokeballs.selectedSelection()()].description">
-                      Description
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            -->
           </div>
         </div>
       </div>
