--- a/src/components/templates/caughtStatusTemplate.html
+++ b/src/components/templates/caughtStatusTemplate.html
@@ -1,21 +1,30 @@
 <script type="text/html" id="caughtStatusTemplate">
     <knockout style="display: inline;">
         <!-- ko if: $data.status == CaughtStatus.NotCaught -->
-        <img title="You have not captured this Pokémon yet!"
-             class="pokeball-smallest"
+        <img class="pokeball-smallest"
              src="assets/images/pokeball/None.svg"
+             data-bind="tooltip: {
+               title: 'You have not captured this Pokémon yet!',
+               trigger: 'hover'
+             }"
         />
         <!-- /ko -->
         <!-- ko if: $data.status == CaughtStatus.Caught -->
-        <img title="You have captured this Pokémon!"
-             class="pokeball-smallest"
+        <img class="pokeball-smallest"
              src="assets/images/pokeball/Pokeball.svg"
+             data-bind="tooltip: {
+               title: 'You have captured this Pokémon!',
+               trigger: 'hover'
+             }"
         />
         <!-- /ko -->
         <!-- ko if: $data.status == CaughtStatus.CaughtShiny -->
-        <img title="You have captured this Pokémon shiny!"
-             class="pokeball-smallest"
+        <img class="pokeball-smallest"
              src="assets/images/pokeball/Pokeball-shiny.svg"
+             data-bind="tooltip: {
+               title: 'You have captured this Pokémon shiny!',
+               trigger: 'hover'
+             }"
         />
         <!-- /ko -->
     </knockout>
