--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -687,3 +687,33 @@ td.tight {
   text-shadow: 0px 0px 10px #000 !important;
   opacity: 1;
 }
+
+/* Route Pokémon List */
+.route-link-overlay {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width:100%;
+  height: 100%;
+}
+
+/* Route name, Pokémon name and defeated Pokémon */
+.pageItemTitle {
+  position: relative;
+
+  .right {
+    top: 50%;
+    transform: translate(0%, -50%);
+  }
+
+  .left {
+    top: 50%;
+    transform: translate(0%, -50%);
+  }
+}
+
+.battle-view {
+  h2 {
+    font-size: 1.8rem; /* Original: 2rem */
+  }
+}
